--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,11 @@
             <version>6.0</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>com.sun.jersey</groupId>
+            <artifactId>jersey-json</artifactId>
+            <version>1.19.1</version>
+        </dependency>
     </dependencies>
 
     <build>
